# projects

./: .gitignore  README.md  add_compile_cmd.py  add_more_concepts.py  backup_system.py  comment_lld.py  format_lld.py  gui.py  install.sh  instruction.txt  reference_temp.m4a  restore_system.py  run.sh  sarath.cpp  simplify_lld.py  style.css  tags  test_pipeline.py  test_pyin.py  test_slipknot.m4a  toggle_remote.sh  update_compile_cmd.py  vocal_analyzer.py  vocalpulse.desktop
AlgorithmVisualizer/: Makefile
AlgorithmVisualizer/src/: PathfindingVisualizer.h
ChessAI/include/: game.h  gamelog.h  movevalidator.h  player.h  rook.h
ChessAI/src/: ai.cpp  pawn.cpp
CompetitiveProgramming/: a.out  allConcepts.cpp
CompetitiveProgramming/AlgoTemplatesCPP/: 12_SinglyLL.cpp  13_Trie.cpp  14_Heap.cpp  1_2PointerTemplate.cpp  6_BinarySearch.cpp
CompetitiveProgramming/C++/: FIbonocciTriangle.cpp  Fibonocci.cpp  RemoveAllOccurancefromSortedLinkedList.cpp  charArraytoString.cpp  charCount.cpp  copy constructor.cpp  danglingPointer.cpp  diagonal.cpp  exception_runtime.cpp  exception_userdefined.cpp  friendfunction.cpp  lambdaFunctions.cpp  linkedlist.cpp  mostOccurringChar.cpp  mostSecondOccured2.cpp  multipleInheritance.cpp  pattern.cpp  peakelementInArray.cpp  power.cpp  reverseWordsInSentence.cpp  smallestCommonInArray.cpp  stringCombination.cpp  structSize.cpp  sum of subarray.cpp  template.cpp  wordSearch.cpp
CompetitiveProgramming/NeetCode/: a.out
CompetitiveProgramming/practice/: 11_inlineVolatileExternMacros.cpp  all  (+11 more)
Notepad/: CMakeLists.txt  Resource.qrc
OrderManagementSystem/: Makefile  README.md  deribit_trading
ThreadPool/: Makefile  tags
compression/: Makefile
cpp/: sarath  sarath.cpp
dotfiles/: .bashrc  config.dotinst
encryptor/: gui.h  main.cpp
mediaPlayer/: Makefile
pareto-practice-tracker/: app.js  index.html  launch_app.sh  problems.js  server.py  start_server.sh  style.css
pikaHyprland/: README.md  autosub.lua  index.html  install.sh  mpv_bridge.py  simple-subs.lua  sub_browser.py  sub_list.py  sub_selector.sh  uninstall.sh
resume/: 1_Mphasis_Inspirisys_HP.md  2_MarketSimplified.md  3_General_And_Behavioral.md
scratch/: monitor_nmcli.sh
sqlProject/: DESIGN.md  queries.sql  schema.sql
useful_scripts/: fix_login.sh  mpv-share
webremote-pro/: app.js  index.html  main.py  style.css
yaml/: config.yaml  load_yaml  load_yaml.cpp
(+391 files in other folders)
